# docext

./: .env.example  README.md  mistral_ocr_python_guide.md  pyproject.toml  requirements.txt
docext/app/: pdf2md.py
docext/core/: client.py
